--- a/servicenow.servicenow.now.yml
+++ b/servicenow.servicenow.now.yml
@@ -4,6 +4,6 @@ keyed_groups:
   - key: sn_sys_class_name | lower
     prefix: ''
     separator: ''
-  - key: u_patch_window | lower
+  - key: sn_u_patch_window | lower
     prefix: ''
     separator: ''
