--- a/servicenow.servicenow.now.yml
+++ b/servicenow.servicenow.now.yml
@@ -1,5 +1,6 @@
 plugin: servicenow.servicenow.now
 table: cmdb_ci_linux_server
+enhanced: true
 keyed_groups:
   - key: sn_sys_class_name | lower
     prefix: ''
