--- a/servicenow.servicenow.now.yml
+++ b/servicenow.servicenow.now.yml
@@ -1,6 +1,6 @@
 plugin: servicenow.servicenow.now
 table: cmdb_ci_linux_server
-enhanced: true
+fields: [ip_address,fqdn,host_name,sys_class_name,name,u_patch_window]
 keyed_groups:
   - key: sn_sys_class_name | lower
     prefix: ''
