--- a/ovirt.yml
+++ b/ovirt.yml
@@ -12,6 +12,9 @@ keyed_groups:
 - key: tags
   prefix: tag
   separator: _
+- key: os_type
+  prefix: os_type
+  separator: _
 ovirt_hostname_preference:
 - name
 - fqdn
